--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -28,6 +28,15 @@ jobs:
       uses: r-lib/actions/setup-r@v2
       with:
         r-version: '4.3.0'
+        use-public-rspm: true
+
+    - name: Cache apt packages
+      uses: actions/cache@v3
+      with:
+        path: /var/cache/apt/archives
+        key: ${{ runner.os }}-apt-${{ hashFiles('.github/workflows/build-site.yml') }}
+        restore-keys: |
+          ${{ runner.os }}-apt-
 
     - name: Install system dependencies
       run: |
@@ -38,9 +47,25 @@ jobs:
           libxml2-dev \
           pandoc
 
+    - name: Cache R packages
+      uses: actions/cache@v3
+      with:
+        path: ${{ env.R_LIBS_USER }}
+        key: ${{ runner.os }}-r-${{ hashFiles('**/DESCRIPTION') }}-${{ hashFiles('.github/workflows/build-site.yml') }}
+        restore-keys: |
+          ${{ runner.os }}-r-
+
     - name: Install R packages
       run: |
         Rscript -e 'install.packages("rmarkdown", repos="https://cloud.r-project.org")'
+
+    - name: Cache Pandoc
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pandoc
+        key: ${{ runner.os }}-pandoc-${{ hashFiles('rmd/**') }}
+        restore-keys: |
+          ${{ runner.os }}-pandoc-
 
     - name: Build site
       run: |
